--- a/food-trucks/Base.lproj/Main.storyboard
+++ b/food-trucks/Base.lproj/Main.storyboard
@@ -58,6 +58,9 @@
                                 <rect key="frame" x="235" y="768" width="159" height="39"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Use as guest"/>
+                                <connections>
+                                    <segue destination="WDB-2h-bme" kind="presentation" modalPresentationStyle="fullScreen" id="UTb-xf-cF3"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -142,13 +145,32 @@
                     <view key="view" contentMode="scaleToFill" id="hJb-Dd-Fcw">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Uo-95-jGb">
+                                <rect key="frame" x="59" y="136" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QBy-LL-l1c">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Enter a zip code" id="x0O-Vv-wHg"/>
+                                </items>
+                            </navigationBar>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="D5V-xx-7iy"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <connections>
+                        <outlet property="place" destination="7Uo-95-jGb" id="BLP-pC-3Iv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bvd-jz-Z6M" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1612" y="80"/>
+            <point key="canvasLocation" x="1611.5942028985507" y="79.6875"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="QYX-h0-WVO">
